add header text style

--- a/css/view.css
+++ b/css/view.css
@@ -21,10 +21,7 @@ h1,h2,h3, .btn
   font-weight: 400;
   letter-spacing: 1px;
 }
-h2,h3,h4
-{
-  color: #000000
-}
+
 h1 
 {
   color: #ffffff;
@@ -33,7 +30,7 @@ h1
 }
 h2 
 {
-  color: #000000;
+  color: #ffffff;
   font-size: 40px;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -210,6 +207,32 @@ h1 { font-size: 1.5em; margin: 10px; }*/
   color: #ddd; 
  float: right; 
 }
+.welcome-text{
+    
+}
+.welcome-text h2{
+    font-size: 48px;
+    color: #fff;
+    margin-bottom: 25px;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 60px;
+}
+.welcome-text h2 span.bold{
+    font-weight: 800;
+}
+
+.welcome-text p{
+    color: #fff;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    margin-bottom: 20px;
+}
+.welcome-text p span{
+    letter-spacing: 1px;
+}
+
 
 /***** CSS Magic to Highlight Stars on Hover *****/
 
